--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 setw -g mouse on
 
+# weird characters appear when entering tmux: https://github.com/microsoft/WSL/issues/5931
+set -sg escape-time 1
+
 # Set new panes to open in current directory
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
