--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,3 @@
-setw -g mouse on
-
 # weird characters appear when entering tmux: https://github.com/microsoft/WSL/issues/5931
 set -sg escape-time 1
 
@@ -15,6 +13,13 @@ set -s default-terminal 'tmux-256color'
 set -ag terminal-overrides ",xterm-256color:RGB"
 set -g @plugin 'dracula/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+#copy to clipboard: https://www.seanh.cc/2020/12/27/copy-and-paste-in-tmux/#tmux-yank
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g mouse on
+bind -T copy-mode    C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
+bind -T copy-mode-vi C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
+
 
 # theme customizations
 set -g @dracula-plugins "time"
