--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g mouse on
 bind -T copy-mode    C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
 bind -T copy-mode-vi C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
+set -g @yank_selection_mouse 'clipboard'
 
 
 # theme customizations
