--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,8 +11,16 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -s default-terminal 'tmux-256color'
 set -ag terminal-overrides ",xterm-256color:RGB"
-set -g @plugin 'dracula/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# set -g @plugin 'dracula/tmux'
+
+# # theme customizations
+# set -g @dracula-plugins "time"
+# set -g @dracula-show-powerline true
+# set -g @dracula-show-fahrenheit true
+# set -g @dracula-show-right-sep ' '
+# set -g @dracula-show-left-sep ' '
 
 #copy to clipboard: https://www.seanh.cc/2020/12/27/copy-and-paste-in-tmux/#tmux-yank
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -21,12 +29,37 @@ bind -T copy-mode    C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
 bind -T copy-mode-vi C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
 set -g @yank_selection_mouse 'clipboard'
 
+# TokyoNight colors for Tmux
+set -g mode-style "fg=#7aa2f7,bg=#3b4261"
 
-# theme customizations
-set -g @dracula-plugins "time"
-set -g @dracula-show-powerline true
-set -g @dracula-show-fahrenheit true
-set -g @dracula-show-right-sep ' '
-set -g @dracula-show-left-sep ' '
+set -g message-style "fg=#7aa2f7,bg=#3b4261"
+set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
+
+set -g pane-border-style "fg=#3b4261"
+set -g pane-active-border-style "fg=#7aa2f7"
+
+set -g status "on"
+set -g status-justify "left"
+
+set -g status-style "fg=#7aa2f7,bg=#16161e"
+
+set -g status-left-length "100"
+set -g status-right-length "100"
+
+set -g status-left-style NONE
+set -g status-right-style NONE
+
+set -g status-left "#[fg=#15161e,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#16161e,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#16161e] #{prefix_highlight} #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %a %m/%d %I:%M %p "
+
+setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#16161e"
+setw -g window-status-separator ""
+setw -g window-status-style "NONE,fg=#a9b1d6,bg=#16161e"
+setw -g window-status-format "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[default] #I #W "
+setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I #W "
+
+# tmux-plugins/tmux-prefix-highlight support
+set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#16161e]#[fg=#16161e]#[bg=#e0af68]"
+set -g @prefix_highlight_output_suffix ""
 
 run '~/.tmux/plugins/tpm/tpm'
