--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,11 +28,10 @@ set -g mouse on
 bind -T copy-mode    C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
 bind -T copy-mode-vi C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
 set -g @yank_selection_mouse 'clipboard'
-set -g @yank_action 'copy-pipe' #prevent scroll to bottom after copy
-# setw -g mode-keys vi
-# bind -T copy-mode-vi v send -X begin-selection
-# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-# bind P paste-buffer
+setw -g mode-keys vi
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind P paste-buffer
 
 # TokyoNight colors for Tmux
 set -g mode-style "fg=#7aa2f7,bg=#3b4261"
