--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -s default-terminal 'tmux-256color'
 set -ag terminal-overrides ",xterm-256color:RGB"
+
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # set -g @plugin 'dracula/tmux'
 
