--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,7 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-save-interval '0'
 
 # set -g @plugin 'dracula/tmux'
 
