--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,15 +15,7 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-save-interval '0'
-
-# set -g @plugin 'dracula/tmux'
-
-# # theme customizations
-# set -g @dracula-plugins "time"
-# set -g @dracula-show-powerline true
-# set -g @dracula-show-fahrenheit true
-# set -g @dracula-show-right-sep ' '
-# set -g @dracula-show-left-sep ' '
+ set -g @resurrect-strategy-nvim 'session'
 
 #copy to clipboard: https://www.seanh.cc/2020/12/27/copy-and-paste-in-tmux/#tmux-yank
 set -g @plugin 'tmux-plugins/tmux-yank'
